--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
 
-dotenv
 legge til mongodb for lagring av klaner til warlog.
 legge til at kun admin eller server owner kan bruke kommando
 teste at intervallet fungerer
@@ -12,3 +11,6 @@ Warlog: Vurdere å få output i rekkefølge etter tid. Er det mulig?
         Kanskje det fikser seg selv når man faktisk ikke logger alle kampene ved en kjøring.
 
 Ved adding av bot. Få spørsmål om å starte scheduling jobber.
+
+Bugs
+Under posting av warlogs ble eh unhadled promiserejection kastet. med code 500 med en post melding til kanelen
